# lab1_actions

./: CMakeLists.txt  Info.plist  lib.cpp  lib.h  main.cpp  test_version.cpp  version.h.in
.github/workflows/: release.yml
